<resources>
    <!-- Main app -->
    <string name="app_name">FoodApp</string>
    <string name="start_tusk">start.tusk</string>

    <!-- Activity`s -->
    <!-- Splash layout -->
    <string name="splash_image">Splash Image</string>
    <!-- Intro layout -->
    <string name="intro_description">В этом приложении можно собрать продуктовую корзину по самым низким ценам</string>
    <string name="intro_title">Cервис для покупки еды</string>
    <string name="intro_logo_text">Intro Logo</string>
    <string name="intro_status">intro_status</string>

    <!-- Activity Map -->
    <string name="activity_map_title">Map</string>
    <string name="activity_map_toolbar_title">Самовывоз</string>
    <string name="activity_map_select_pickup_button">ВЫБРАТЬ</string>

    <!-- Fragment`s -->
    <!-- Carousel layout -->
    <string name="carousel_image">Carousel Image</string>

    <!-- Card Main Element layout -->
    <string name="food_image_hint">Food Image</string>

    <!-- Custom Button -->
    <string name="custom_button_image">Custom Button Image</string>
    <string name="card_element_title_text">Название блюда</string>
    <string name="card_element_price_postfix">руб.</string>
    <string name="card_element_price_text">250</string>

    <!-- Custom Bottom Bar -->
    <string name="custom_button_text_main">Главный</string>
    <string name="custom_button_text_favorite">Избранное</string>
    <string name="custom_button_text_account">Профиль</string>

    <!-- Exit Dialog -->
    <string name="exit_dialog_title_text">Выход</string>
    <string name="exit_dialog_message_text">Вы хотите выйти из приложения?</string>
    <string name="exit_dialog_negative_button_text">ОТМЕНА</string>
    <string name="exit_dialog_positive_button_text">ДА</string>
    <string name="exit_dialig_tag">EXIT</string>

    <!-- Fragment Authorization -->
    <string name="fragment_authorization_login_hint_text">Логин</string>
    <string name="fragment_authorization_password_hint_text">Пароль</string>
    <string name="fragment_authorization_auth_button_text">войти</string>
    <string name="fragment_authorization_done_text">Успешно</string>
    <string name="fragment_authorization_login_error_text">Некорректный адрес e-mail или пароль</string>

    <!-- Fragment Account -->
    <string name="fragment_account_logout_text">ВЫХОД</string>

    <!-- Fragment RationaleDialog -->
    <string name="rationale_permission_location_dialog">Для отображения пунктов самовывоза требуется доступ к вашему местоположению</string>
    <string name="rationale_permission_location_required_toast">Доступ к отображению местоположения не разрешен :(</string>
</resources>
