<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/card_main_element_image"
                android:layout_width="110dp"
                android:layout_height="82dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/food_image_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/card_main_element_text"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/card_element_title_text"
                android:textAppearance="@style/Text.Regular.13"
                app:layout_constraintEnd_toEndOf="@+id/card_main_element_image"
                app:layout_constraintStart_toStartOf="@+id/card_main_element_image"
                app:layout_constraintTop_toBottomOf="@+id/card_main_element_image" />

        <TextView
                android:id="@+id/card_main_element_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/card_element_price_text"
                android:textAppearance="@style/Text.Bold.15.Green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/card_main_element_text"
                app:layout_constraintTop_toBottomOf="@+id/card_main_element_text" />

        <TextView
                android:id="@+id/card_main_element_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/card_element_price_postfix"
                android:textAppearance="@style/Text.Regular.15.Green"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_element_price"
                app:layout_constraintStart_toEndOf="@+id/card_main_element_price" />

        <ImageButton
                android:id="@+id/card_main_element_basket_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="?selectableItemBackground"
                android:src="@drawable/ic_basket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_main_element_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>