<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.intro.IntroActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/intro_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:contentDescription="@string/intro_logo_text"
            app:layout_constraintDimensionRatio="1:1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/intro_title"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/intro_description"
            android:id="@+id/textView6"
            android:gravity="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="46dp" android:layout_marginStart="46dp" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp"/>

</android.support.constraint.ConstraintLayout>