<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="9dp"
    android:layout_marginEnd="13dp"
    android:layout_marginRight="13dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_favorite_element_image"
            android:layout_width="110dp"
            android:layout_height="82dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/food_image_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_favorite_element_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/card_element_title_text"
            android:textAppearance="@style/Text.Regular.13"
            app:layout_constraintBottom_toTopOf="@+id/card_favorite_element_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_favorite_element_image"
            app:layout_constraintTop_toTopOf="@+id/card_favorite_element_image" />

        <TextView
            android:id="@+id/card_favorite_element_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="8dp"
            android:text="@string/card_element_price_text"
            android:textAppearance="@style/Text.Bold.15.Green"
            app:layout_constraintBottom_toBottomOf="@+id/card_favorite_element_image"
            app:layout_constraintStart_toEndOf="@+id/card_favorite_element_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/card_favorite_element_rub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/card_element_price_postfix"
            android:textAppearance="@style/Text.Regular.15.Green"
            app:layout_constraintBottom_toBottomOf="@+id/card_favorite_element_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_favorite_element_price" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="419dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/card_favorite_element_favorite_button"
            android:layout_width="23dp"
            android:layout_height="28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>